# uav_gazebo_slam_yolo

./: README.md
ncnn_ros/: CMakeLists.txt  package.xml
ncnn_ros/action/: goal.action  pose_add.action
ncnn_ros/include/: layer_type_enum.h  platform.h  yolo-fastestv2.h
ncnn_ros/lib/pkgconfig/: ncnn.pc
ncnn_ros/model/: gx-opt.param  yolov5.param
ncnn_ros/msg/: box.msg  control.msg
ncnn_ros/scripts/: get_control.py
ncnn_ros/src/: cmd_pose.cpp  demo.cpp  get_fishcamera.cpp  get_img_world.cpp  get_one_img.cpp  img_link.cpp  path2pose.cpp  pub_goal.cpp  rotors_control.cpp  sub_box.cpp  test_demo.cpp  test_opencv.cpp  travel.cpp
ncnn_ros/srv/: goal.srv
rotors_simulator/rotors_description/launch/: test.launch  xacrodisplay_techpod.launch
rotors_simulator/rotors_description/urdf/: ardrone.xacro  ardrone_base.xacro  head.xacro  kinet.xacro  leaser.xacro
rotors_simulator/rotors_gazebo/configs/: move_base.rviz
rotors_simulator/rotors_gazebo/launch/: 1_hector.launch  mav_hovering_example.launch  rotors_hector.launch  sum_hector.launch
rotors_simulator/rotors_gazebo/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
rotors_simulator/rotors_gazebo/resource/: lee_controller_ardrone.yaml
rotors_simulator/rotors_gazebo/worlds/: cubot.world  gx_gazebo.world  migong.world
